gcc/testsuite/rust/rustc/ui/parser/keyword-enum-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py enum'

fn main() {
    let enum = "foo"; // { dg-error "" "" { target *-*-* } }
}

